--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -2,17 +2,22 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @report.date %>
+  <%= @report.walk_date %>
+</p>
+
+<p>
+  <strong>Time:</strong>
+  <%= @report.walk_time %>
+</p>
+
+<p>
+  <strong>Duration:</strong>
+  <%= @report.walk_duration %>
 </p>
 
 <p>
   <strong>Dog:</strong>
   <%= @report.dog %>
-</p>
-
-<p>
-  <strong>Time:</strong>
-  <%= @report.time %>
 </p>
 
 <p>
