--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -4,8 +4,9 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Dog</th>
       <th>Time</th>
+      <th>Duration</th>
+      <th>Dog</th>
       <th>Weather</th>
       <th>Recap</th>
       <th>Pees</th>
@@ -22,9 +23,10 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
-        <td><%= report.date %></td>
+        <td><%= report.walk_date %></td>
+        <td><%= report.walk_time %></td>
+        <td><%= report.walk_duration %></td>
         <td><%= report.dog %></td>
-        <td><%= report.time %></td>
         <td><%= report.weather %></td>
         <td><%= report.recap %></td>
         <td><%= report.pees %></td>
