--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,6 +3,8 @@
 <table>
   <thead>
     <tr>
+      <th>Client</th>
+      <th>Dogs</th>
       <th>Date</th>
       <th>Time</th>
       <th>Duration</th>
@@ -23,6 +25,8 @@
   <tbody>
     <% @reports.each do |report| %>
       <tr>
+        <td><%= report.client.name %></td>
+        <td><%= report.dog_names %></td>
         <td><%= report.walk_date %></td>
         <td><%= report.walk_time %></td>
         <td><%= report.walk_duration %></td>
