--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :walk_duration, "Duration" %>
+    <%= f.label :walk_duration, "Duration (mins)" %>
     <input type="number", value="<%= @report.walk_duration %>" name="report[walk_duration]" />
   </div>
 
