--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -60,5 +60,14 @@
   <%= @report.overall %>
 </p>
 
+<p>
+  <strong>Pictures:</strong>
+  <ul>
+  <% @report.assets.each do |asset| %>
+    <li><%= image_tag asset.picture.url %></li>
+  <% end %>
+  </ul>
+</p>
+
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
