--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -11,7 +11,7 @@
   </thead>
 
   <tbody>
-    <% @dogs.each do |dog| %>
+    <% @client.dogs.each do |dog| %>
       <tr>
         <td><%= dog.name %></td>
         <td><%= link_to 'Show', client_dog_path(@client, dog) %></td>
