--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -6,21 +6,15 @@
       <th>Name</th>
       <th>Email</th>
       <th>Address</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @clients.each do |client| %>
       <tr>
-        <td><%= client.name %></td>
+        <td><%= link_to client.name, client %></td>
         <td><%= client.email %></td>
         <td><%= client.address %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
