--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,22 +1,16 @@
-<h1><%= @client.name %>'s dogs</h1>
+<h1><%= link_to @client.name, @client %>'s dogs</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @client.dogs.each do |dog| %>
       <tr>
-        <td><%= dog.name %></td>
-        <td><%= link_to 'Show', client_dog_path(@client, dog) %></td>
-        <td><%= link_to 'Edit', edit_client_dog_path(@client, dog) %></td>
-        <td><%= link_to 'Destroy', client_dog_path(@client, dog), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to dog.name, client_dog_path(@client, dog) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,5 +18,5 @@
 
 <br>
 
-<%= link_to 'New Dog', new_client_dog_path(@client) %>
+<%= link_to 'New Dog', new_client_dog_path(@client) %> | 
 <%= link_to 'Back', client_path(@client) %>
