--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -5,5 +5,7 @@
   <%= @dog.name %>
 </p>
 
-<%= link_to 'Edit', edit_client_dog_path(@client, @dog) %> |
+<%= link_to 'Edit', edit_client_dog_path(@client, @dog) %> | 
+<%= link_to 'Destroy', client_dog_path(@client, @dog), method: :delete, data: { confirm: 'Are you sure?' } %>
+<br/>
 <%= link_to 'Back', client_dogs_path(@client) %>
