--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
 </p>
 <p>
   <strong>Last sign in at:</strong>
-  <%= l @user.last_sign_in_at, :format => :datetime %>
+  <%= l @user.last_sign_in_at, :format => :datetime if @user.last_sign_in_at %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> | 
