time_str helper, date/time/duration format validation

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -30,7 +30,7 @@
       <p><%= @report.client.name %></p>
 
       <h3>Time:</h3>
-      <p><%= @report.walk_time %></p>
+      <p><%= time_str(@report.walk_time) %></p>
 
 
       <h3>Duration:</h3>
