--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= report.user.email %></td>
         <td><%= report.dog_names %></td>
         <td><%= l report.walk_date %></td>
-        <td><%= l Time.parse(report.walk_time) %></td>
+        <td><%= time_str(report.walk_time) %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
         <td><%= link_to 'Destroy', report, method: :delete, data: { confirm: 'Are you sure?' } %></td>
