User (Pet care provider) names

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -39,15 +39,15 @@
     <%= f.text_field :weather %>
   </div>
   <div class="field">
-    <%= f.label :recap %>
+    <%= f.label :recap, "Today" %>
     <%= f.text_area :recap %>
   </div>
   <div class="field">
-    <%= f.label :pees %>
+    <%= f.label :pees, "Pee (# of times)" %>
     <%= f.text_field :pees %>
   </div>
   <div class="field">
-    <%= f.label :poops %>
+    <%= f.label :poops, "Business (# of times, solid/loose/liquid)" %>
     <%= f.text_field :poops %>
   </div>
   <div class="field">
