--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Email</th>
       <th></th>
       <th></th>
@@ -12,7 +13,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= link_to user.email, user %></td>
+        <td><%= link_to user.name, user %></td>
+        <td><%= mail_to user.email %></td>
       </tr>
     <% end %>
   </tbody>
