--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', client_dog_path(@client, @dog) %> |
-<%= link_to 'Back', client_dogs_path(@client) %>
+<%= link_to 'Back', client_dog_path(@client, @dog) %>
