--- a/app/views/dogs/new.html.erb
+++ b/app/views/dogs/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New dog</h1>
+<h1>New dog for <%= @client.name %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', client_dogs_path(@client) %>
+<%= link_to 'Back', @client %>
