--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -20,6 +20,6 @@
 </p>
 
 <%= link_to 'Edit', edit_client_path(@client) %> | 
-<%= link_to 'Destroy', @client, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Destroy', @client, method: :delete, data: { confirm: "Are you sure?\nThis will delete all associated Dogs and Reports." } %>
 <br/>
 <%= link_to 'Back', clients_path %>
