--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -24,13 +24,10 @@
 
     <h1 class="report-card-header"><%= @report.dog_names %><span class="report-card-date"> / <%= @report.walk_date.strftime("%A, %d %b %Y") %></span></h1>
 
-    <h2>Pet care provider</h2>
+    <h2>Pet care provider:</h2>
     <p><%= @report.user.name %></p>
 
     <div class="report-left">
-
-      <h3>Client:</h3>
-      <p><%= @report.client.name %></p>
 
       <h3>Time:</h3>
       <p><%= time_str(@report.walk_time) %></p>
