mail clients after new report

--- a/app/views/report_mailer/new_report_email.text.erb
+++ b/app/views/report_mailer/new_report_email.text.erb
@@ -1,4 +1,6 @@
-<%= @report.user.email %> submitted a new report card.
-===============================================
+Howdy,
  
+Here's your Chasing Tails report card:
 <%= report_url(@report) %>
+
+Thank you for your business!
