couple small tickets

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -14,7 +14,7 @@
 </p>
 
 <p>
-	<strong>Dogs:</strong>
+	<strong>Pets:</strong>
 	<%= dog_links(@client) %>
   <%= link_to "[+]", new_client_dog_path(@client) %>
 </p>
