--- a/app/views/dogs/_checkboxes.html.erb
+++ b/app/views/dogs/_checkboxes.html.erb
@@ -1,5 +1,5 @@
 <div class="input check_boxes optional report_dogs">
-	<label class="check_boxes optional">Dogs</label>
+	<label class="check_boxes optional">Pets</label>
 	<% @client.dogs.each do |dog| %>
 		<span class="checkbox">
 			<input class="check_boxes optional" id="report_dog_ids_<%= dog.id %>" name="report[dog_ids][]" type="checkbox" value="<%= dog.id %>" checked="true" />
