--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -8,7 +8,7 @@
     <tr>
       <th>Client</th>
       <th>Pet care provider</th>
-      <th>Dogs</th>
+      <th>Pets</th>
       <th>Date</th>
       <th>Time</th>
       <th></th>
@@ -23,7 +23,7 @@
         <td><%= report.client.name %></td>
         <td><%= report.user.name %></td>
         <td><%= report.dog_names %></td>
-        <td><%= l report.walk_date %></td>
+        <td><%= report.walk_date.to_s(:long) %></td>
         <td><%= time_str(report.walk_time) %></td>
         <td><%= link_to 'Show', report %></td>
         <td><%= link_to 'Edit', edit_report_path(report) %></td>
