--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -80,6 +80,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Report", :disable_with => "Submitting..." %>
   </div>
 <% end %>
