--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -19,7 +19,31 @@
   <%= link_to "[+]", new_client_dog_path(@client) %>
 </p>
 
-<%= link_to 'Edit', edit_client_path(@client) %> | 
+<h1>Walks in <%= Date.today.year %></h1>
+<% @reports.each do |month, reports| %>
+<table>
+  <thead><tr><th colspan=4><%= month %></th></tr></thead>
+  <tbody>
+      <tr>
+        <td>Date</td>
+        <td>Time</td>
+        <td>Duration</td>
+        <td>Pets</td>
+      </tr>
+      <% reports.each do |report| %>
+      <tr>
+        <td><%= link_to report.walk_date, report %></td>
+        <td><%= report.walk_time %></td>
+        <td><%= report.walk_duration %></td>
+        <td><%= report.dog_names %></td>
+      </tr>
+      <% end %>
+      <tr><th colspan=2></th><th><%= (reports.sum(&:walk_duration)/60.to_f).round(2) %> hours</th><th></th></tr>
+  </tbody>
+</table>
+<% end %>
+
+<%= link_to 'Edit', edit_client_path(@client), class: "btn" %> |
 <%= link_to 'Destroy', @client, method: :delete, data: { confirm: "Are you sure?\nThis will delete all associated Dogs and Reports." } %>
 <br/>
 <%= link_to 'Back', clients_path %>
