--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -30,19 +30,17 @@
   <div class="field">
     <%= f.label :images_assets, "Pictures" %>
 
-    <!-- show already saved images if theey exist -->
-    <% if !@report.new_record? %>
-      <% @report.images.each do |i| %>
-        <%= image_tag(attachment_url(i, :asset, :fill, 100, 100, format: "jpg")) %>
-      <% end %>
-      <p>(Select new Files if you want to replace these current images).</p>
-    <% end %>
-
     <!-- Show our 3 upload slots, which may have cached values. -->
     <%= f.fields_for :images do |builder| %>
     <div class="field" style="border:dashed 1px #ddd; background-color:rgb(241,241,222);">
+
       <% unless @cached_images.blank? %>
-      This is cached as <b><%= @cached_images.shift.filename %></b>. Choose again to overwrite.
+      This is cached as <b><%= @cached_images.shift %></b>. Choose again to overwrite.
+      <% end %>
+
+      <% if !@report.new_record? && !@report.images[builder.options[:child_index]].id.nil? %>
+      This is cached as <%= attachment_image_tag(@report.images[builder.options[:child_index]], :asset, :fill, 100, 100, format: "jpg") %>
+      <br/>Choose again to overwrite.
       <% end %>
 
       <%= builder.attachment_field :asset, direct: true, presigned: true %>
