--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -19,26 +19,28 @@
   <%= link_to "[+]", new_client_dog_path(@client) %>
 </p>
 
-<h1>Walks in <%= Date.today.year %></h1>
+<h1>Walks</h1>
 <% @reports.each do |month, reports| %>
 <table>
-  <thead><tr><th colspan=4><%= month %></th></tr></thead>
+  <thead><tr><th colspan=5><%= month %></th></tr></thead>
   <tbody>
       <tr>
         <td>Date</td>
         <td>Time</td>
         <td>Duration</td>
         <td>Pets</td>
+        <td>Late Cancellation</td>
       </tr>
       <% reports.each do |report| %>
       <tr>
         <td><%= link_to report.walk_date, report %></td>
-        <td><%= report.walk_time %></td>
-        <td><%= report.walk_duration %></td>
+        <td><%= report.formatted_walk_time %></td>
+        <td><%= report.walk_duration %> min</td>
         <td><%= report.dog_names %></td>
+        <td><%= "Yes" if report.no_show? %></td>
       </tr>
       <% end %>
-      <tr><th colspan=2></th><th><%= (reports.sum(&:walk_duration)/60.to_f).round(2) %> hours</th><th></th></tr>
+      <tr><th colspan=3></th><th><%= (reports.sum(&:walk_duration)/60.to_f).round(2) %> hours</th><th></th></tr>
   </tbody>
 </table>
 <% end %>
