--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -29,7 +29,7 @@
       <p><%= @report.user.name %></p>
 
       <h3>Time:</h3>
-      <p><%= time_str(@report.walk_time) %></p>
+      <p><%= @report.formatted_walk_time %></p>
 
       <h3>Duration:</h3>
       <p><%= @report.walk_duration %> minutes</p>
