Fix migration bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,6 @@
   <%= yield %>
 </div>
 
-<div id="footer">&copy;<%= Date.today.year %>. v<%= ENV['VERSION'] %></div>
+<div id="footer">&copy;<%= Date.today.year %>. v<%= ENV['APP_VERSION'] %></div>
 </body>
 </html>
