Change function names

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -71,7 +71,7 @@
   <script type="text/javascript">
   function reportMapLoad() {
     initMap();
-    setLatLong(<%= @report.lat %>, <%= @report.lng %>);
+    setLatLng(<%= @report.lat %>, <%= @report.lng %>);
   }
   </script>
 
