--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -5,7 +5,7 @@
 <div id="map" style="width: 480px; height: 320px;"></div>
 <script type="text/javascript">
 function reportMapLoad(address) {
-  setLatLong();
+  setHiddenLatLng();
 }
 </script>
 
