--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
 	<strong>Pets:</strong>
-	<%= dog_links(@client) %>
+	<%= raw dog_links(@client) %>
   <%= link_to "[+]", new_client_dog_path(@client) %>
 </p>
 
